# Hunyuan3D-2.1-low-vram-cli

./: README.md  bootstrap.sh  gradio_app.py  install-command.sh  pyproject.toml
hy3dpaint/: textureGenPipeline.py
hy3dpaint/DifferentiableRenderer/: mesh_utils.py
hy3dpaint/hunyuanpaintpbr/: pipeline.py
hy3dpaint/utils/: multiview_utils.py  simplify_mesh_utils.py
hy3dshape/: prepare_reference_image.py
hy3dshape/hy3dshape/: pipelines.py
src/hunyuan3d/: __init__.py  cli.py
tests/: test_cli.py  test_mesh_utils.py  test_simplify_mesh.py
