[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hunyuan3d-cli"
version = "0.1.0"
description = "Agent-oriented CLI for Hunyuan3D shape and PBR texture generation"
requires-python = ">=3.11,<3.12"
dependencies = [
  "accelerate>=1.6,<2",
  "diffusers>=0.30,<1",
  "einops>=0.8,<1",
  "huggingface-hub>=0.30,<2",
  "numpy>=1.26,<3",
  "onnxruntime>=1.16,<2",
  "opencv-python>=4.10,<6",
  "omegaconf>=2.3,<3",
  "pillow>=10,<13",
  "pygltflib>=1.16,<2",
  "pyyaml>=6,<7",
  "rembg>=2,<3",
  "safetensors>=0.4,<1",
  "scikit-image>=0.24,<1",
  "timm>=1,<2",
  "torch>=2.5,<2.7",
  "torchdiffeq>=0.2,<1",
  "torchvision>=0.20,<0.22",
  "tqdm>=4.66,<5",
  "transformers>=4.46,<6",
  "trimesh>=4.4,<5",
]

[project.optional-dependencies]
texture = [
  "basicsr>=1.4,<2", "cupy-cuda12x>=13,<15", "open3d>=0.18,<1",
  "fast-simplification>=0.1.13,<1", "ninja>=1.11,<2", "pybind11>=2.13,<4", "pymeshlab>=2022.2", "pytorch-lightning>=2.6,<3",
  "realesrgan>=0.3,<1", "scipy>=1.11,<2", "xatlas>=0.0.9,<1",
]
dev = ["pytest>=8,<10", "ruff>=0.9,<1"]

[project.scripts]
hunyuan3d = "hunyuan3d.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hunyuan3d"]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]
